Refactor lore setting for player skulls